--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -56,3 +56,14 @@
     border: 1px solid #ccc;
     border-top: none;
 }
+
+.comments {
+    border-radius: 8px;
+    padding: 10px;
+    width: 60em;
+    margin-top: 1em;
+    margin-left: 3.5em;
+    display: inline-block;
+    box-shadow: 6px 4px 18px grey;
+}
+
