--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -4,55 +4,51 @@
 .row:visited, .row:hover, .row:active, .row:focus-within,  {
 	color: #960004;
 }
-.card-content {
-	height: 75px;
-	width: 200px;
-}
-.cardIfo {
-	font-size: 11px;
-	margin-top: -20px;
-	margin-left: -12px;
-}
-.brand {
-	margin-left: 10px;
-	font-size: 20px;
-}
+
+/*Cards*/
 .videosCard {
 	display: inline-block;
 }
+.card-content {
+    height: 75px;
+    width: 200px;
+}
+.cardIfo {
+    font-size: 11px;
+    margin-top: -20px;
+    margin-left: -12px;
+}
+
+/*Nav*/
+.brand {
+    margin-left: 10px;
+    font-size: 20px;
+}
+.nav-wrapper {
+    font-family: 'Catamaran', sans-serif;
+}
+
+/*VideoPage*/
+.videoTitle {
+    margin-left: 3%;
+    font-family: 'Catamaran', sans-serif;
+    font-size: 20px;
+}
+.heart {
+    color: red;
+}
+.customPointer {
+    cursor: pointer;
+}
+
 /* Style the tab */
 .tab {
     overflow: hidden;
-    border: 1px solid #ccc;
-    background-color: #ffffff;
+    border: 5px solid #DFB8B8;
     font-size: 20px;
+    font-family: 'Roboto Slab', serif;
+} 
+.tabBar {
+    margin-bottom: 4%;
 }
 
-/* Style the buttons that are used to open the tab content */
-.tab-button {
-    background-color: inherit;
-    float: left;
-    border: none;
-    outline: none;
-    cursor: pointer;
-    padding: 14px 16px;
-    transition: 0.3s;
-}
-
-/* Change background color of buttons on hover */
-.tab button:hover {
-    background-color: #ddd;
-}
-
-/* Create an active/current tablink class */
-.tab button.active {
-    background-color: #ccc;
-}
-
-/* Style the tab content */
-.tabcontent {
-    display: none;
-    padding: 6px 12px;
-    border: 1px solid #ccc;
-    border-top: none;
-}
