added more style changes

--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -48,6 +48,11 @@
     font-size: 20px;
     font-family: 'Catamaran', sans-serif;
 } 
+
+.tabList{
+    
+}
+
 .tabBar {
     margin-bottom: 4%;
 }
