--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -120,4 +120,12 @@
     box-shadow: 6px 4px 18px grey;
 }
 
-
+/*HomePage*/
+/*.homePage {
+  background-image: url("https://dancingastronaut.com/wp-content/uploads/2017/04/Coachella-Live-Stream-Times.jpg");
+  height: 100vh;
+  width: 100%;
+  background-position: center;
+  background-size: cover;
+}
+*/
