--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -5,7 +5,7 @@
   margin-left: .4em;
 }
 
-.cube{
+.cube {
   background: url(./imgs/cube.jpg) no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -56,7 +56,7 @@
     overflow: hidden;
     border: 5px solid #DFB8B8;
     font-size: 20px;
-    font-family: 'Catamaran', sans-serif;
+    font-family: 'Catamaran', sans-serif; 
 } 
 
 .tabBar {
@@ -83,11 +83,11 @@
 }
 
 .react-tabs__tab--selected {
-  background: #f4f4f4;
+  background: rgb(244, 244, 244);
   border-color: #aaa;
   color: black;
-  border-radius: 2px 2px 0 0;
-}
+  border-radius: 7px;
+}  
 
 .react-tabs__tab--disabled {
   color: GrayText;
